@@ -58,7 +58,7 @@ public class ThornBushSpell extends BaseSpell {
         c.set(SC.MANA_COST, 20, 40);
         c.set(SC.PROJECTILE_COUNT, 1, 3);
         c.set(SC.SHOOT_SPEED, 0.4F, 0.6F);
-        c.set(SC.BASE_VALUE, 2, 9);
+        c.set(SC.BASE_VALUE, 3, 12);
         c.set(SC.CAST_TIME_TICKS, 0, 0);
         c.set(SC.COOLDOWN_SECONDS, 50, 30);
         c.set(SC.TICK_RATE, 30, 30);
