@@ -58,7 +58,7 @@ public class ThrowFlamesSpell extends BaseSpell {
         PreCalcSpellConfigs c = new PreCalcSpellConfigs();
 
         c.set(SC.MANA_COST, 10, 15);
-        c.set(SC.BASE_VALUE, 2, 4);
+        c.set(SC.BASE_VALUE, 2, 8);
         c.set(SC.ATTACK_SCALE_VALUE, 0.1F, 0.5F);
         c.set(SC.SHOOT_SPEED, 0.3F, 0.5F);
         c.set(SC.PROJECTILE_COUNT, 3, 3);
