@@ -54,7 +54,7 @@ public class TidalWaveSpell extends BaseSpell {
         PreCalcSpellConfigs c = new PreCalcSpellConfigs();
 
         c.set(SC.MANA_COST, 10, 15);
-        c.set(SC.BASE_VALUE, 3, 5);
+        c.set(SC.BASE_VALUE, 3, 15);
         c.set(SC.ATTACK_SCALE_VALUE, 0.05F, 0.3F);
         c.set(SC.SHOOT_SPEED, 0.6F, 0.9F);
         c.set(SC.PROJECTILE_COUNT, 3, 5);
