@@ -66,7 +66,7 @@ public class ThunderDashSpell extends BaseSpell {
         PreCalcSpellConfigs c = new PreCalcSpellConfigs();
 
         c.set(SC.MANA_COST, 10, 20);
-        c.set(SC.BASE_VALUE, 3, 9);
+        c.set(SC.BASE_VALUE, 3, 12);
         c.set(SC.CAST_TIME_TICKS, 0, 0);
         c.set(SC.COOLDOWN_SECONDS, 30, 25);
 
