@@ -54,7 +54,7 @@ public class ThunderspearSpell extends BaseSpell {
         PreCalcSpellConfigs c = new PreCalcSpellConfigs();
 
         c.set(SC.MANA_COST, 6, 17);
-        c.set(SC.BASE_VALUE, 5, 20);
+        c.set(SC.BASE_VALUE, 5, 25);
         c.set(SC.SHOOT_SPEED, 0.7F, 1.2F);
         c.set(SC.PROJECTILE_COUNT, 1, 1);
         c.set(SC.CAST_TIME_TICKS, 0, 0);
