@@ -53,8 +53,8 @@ public class ThunderstormSpell extends BaseSpell {
         PreCalcSpellConfigs c = new PreCalcSpellConfigs();
 
         c.set(SC.MANA_COST, 30, 50);
-        c.set(SC.BASE_VALUE, 2, 7);
-        c.set(SC.RADIUS, 2, 4);
+        c.set(SC.BASE_VALUE, 4, 15);
+        c.set(SC.RADIUS, 2.5F, 4);
         c.set(SC.CAST_TIME_TICKS, 40, 25);
         c.set(SC.COOLDOWN_SECONDS, 60 * 5, 60 * 4);
         c.set(SC.TICK_RATE, 30, 15);
