@@ -172,8 +172,6 @@ public class OnServerTick {
                     player.getCapability(PlayerSpellCap.Data)
                         .ifPresent(x -> {
                             x.getCastingData()
-                                .tryCast(player, x);
-                            x.getCastingData()
                                 .onTimePass(player, x, TicksToSpellCooldowns);
                         });
                 }
