@@ -5,8 +5,11 @@ import com.robertx22.mine_and_slash.database.stats.types.offense.PhysicalDamage;
 import com.robertx22.mine_and_slash.database.stats.types.resources.*;
 import com.robertx22.mine_and_slash.mmorpg.Ref;
 import com.robertx22.mine_and_slash.saveclasses.ExactStatData;
+import com.robertx22.mine_and_slash.uncommon.capability.entity.EntityCap;
+import com.robertx22.mine_and_slash.uncommon.capability.player.PlayerSpellCap;
 import com.robertx22.mine_and_slash.uncommon.localization.Words;
 import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.util.text.TextFormatting;
 
 import java.util.ArrayList;
@@ -32,10 +35,8 @@ public enum SpellSchools {
     public TextFormatting format;
     public Words locName;
 
-    public List<ExactStatData> getStatsFor(int schoolLevel) { // TODO make it differ per school;
+    public List<ExactStatData> getStatsFor(int schoolLevel, EntityCap.UnitData data) { // TODO make it differ per school;
         List<ExactStatData> list = new ArrayList<>();
-
-        int level = (int) (ModConfig.INSTANCE.Server.MAXIMUM_PLAYER_LEVEL.get() * ((float) schoolLevel / (float) MAXIMUM_POINTS));
 
         // these will need a lot of fine tuning.
 
@@ -43,16 +44,32 @@ public enum SpellSchools {
         list.add(new ExactStatData(40, Mana.getInstance()));
         list.add(new ExactStatData(60, Energy.getInstance()));
 
-        list.add(new ExactStatData(1.5F, ManaRegen.getInstance()));
+        list.add(new ExactStatData(3, ManaRegen.getInstance()));
         list.add(new ExactStatData(3, EnergyRegen.getInstance()));
-        list.add(new ExactStatData(2, HealthRegen.getInstance()));
-        list.add(new ExactStatData(2, MagicShieldRegen.getInstance()));
+        list.add(new ExactStatData(3, HealthRegen.getInstance()));
+        list.add(new ExactStatData(3, MagicShieldRegen.getInstance()));
 
-        list.add(new ExactStatData(1, PhysicalDamage.getInstance()));
+        list.add(new ExactStatData(0.75F, PhysicalDamage.getInstance()));
 
-        list.forEach(x -> x.scaleToLvl(level)); // scale to this level, not player level
+        int level = getEffectiveLevel(schoolLevel);
+        int lvl = MathHelper.clamp(level, 0, data.getLevel());
+
+        list.forEach(x -> x.scaleToLvl(lvl)); // scale to this level, not player level
 
         return list;
+    }
+
+    public int getEffectiveLevel(PlayerSpellCap.ISpellsCap spells) {
+        return getEffectiveLevel(spells.getAbilitiesData()
+            .getSchoolPoints(this));
+
+    }
+
+    public int getEffectiveLevel(int schoolLevel) {
+        int level = (int) (ModConfig.INSTANCE.Server.MAXIMUM_PLAYER_LEVEL.get() * ((float) schoolLevel / (float) MAXIMUM_POINTS));
+
+        return level;
+
     }
 
     public ResourceLocation getGuiIconLocation() {
